Version 2.23
---------
 * virtnbdbackup:
  - Log created nbd socket information in URI format, so it can be re-used
  with external tools more easily.

Version 2.22
---------
 * Test enhancements:
   - check btrfs filesystem stats in restored VM.
   - run checksum verify after all backups.
 * virtnbdbackup:
   - If NBD connection drops, catch correct exception. (#254)
   - Provide better error message if checkpoint inconsistency is detected.

Version 2.21
---------
 * virtnbdbackup: Detect dirty regions containing only zeroes during
 incremental backup (fstrim) (#250)

 Before, any dirty block being part of the incremental/differential bitmap
 would be backed up, even if not required. Thanks to the input and
 enhancements
 of
	Roman Grigoriev <grigoriev177 _at_ gmail.com>
 and
	Denis V. Lunev <den _at_ openvz.org>
 the zeroed block regions are now compared to the base:allocation
 bitmap and detected as such.

 This reduces the amount of data backed up if virtual machines have disks
 configured with discard=unmap option and use fstrim to free unused space.

Version 2.20
---------
 * virtnbdmap: add option -H for better debugging, code cleanup
 * virtnbdmap: fix situations where multiple blocks in row are
 required to map the correct data.

Version 2.19
---------
 * virtnbdmap sometimes fails to correctly map disk images due to
 block offsets spanning multiple frames in the stream format, resulting in
 Input/Output errors accessing the disk partition data (#249)

Version 2.18
---------
 * If auto backup mode is switched to incremental and --raw option
 is passed, backup would fails instead of showing an warning that
 raw devices are excluded (#239)

Version 2.17
---------
 * Add rpm package build for fedora 41 (#234)
 * virtnbdbackup: Remote backup fails if spaces exist in image path (#235)
 * virtnbdrestore: Remote restore would fail if target path contains spaces.

Version 2.16
---------
 * virtnbdrestore: If domain with multiple disks is restored and config